<resources>
    <string name="app_name">My Messaging App V 1.0, developed by Kinjalkumari Dhimmar and Monikakumari</string>

    <string name="hello_world">Welcome to Messaging page!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="messages">Messages:</string>
    <string name="send">Send</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="enter_message">Enter message</string>
    <string-array name="contacts">
        <item>Larry Page</item>
        <item>Sergey Brin</item>
        <item>Eric Schmidt</item>
        <item>Andy Rubin</item>
        <item>James Gosling</item>
        <item>Anders Hejlsberg </item>
        <item>Bjarne Stroustrup</item>
    </string-array>
</resources>