<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MessageActivity">

    <TextView
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="23sp"
        android:id="@+id/textView"
        android:textColor="@color/black"
        android:layout_margin="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_margin="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Larry Page"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:id="@+id/person_textView"
            android:layout_marginBottom="20dp">
        </TextView>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_contact_round"
            android:layout_marginBottom="10dp">
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messages"
            android:maxLines="10"
            android:id="@+id/textMessage"
            android:scrollbars="vertical"
            android:textColor="@color/black">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">
            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone"
                android:id="@+id/edit_text_phone_num">
            </EditText>
            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_message"
                android:id="@+id/edit_text_message">
            </EditText>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/send_btn"
            android:text="@string/send">
        </Button>
    </LinearLayout>

</RelativeLayout>